--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,23 @@ version: '3.8'
 
 services:
   web:
-    build: .
     container_name: chat_web
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
     environment:
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       - SECRET_KEY=${SECRET_KEY}
+    working_dir: /usr/src/app/
+    volumes:
+      - .:/usr/src/app/
     depends_on:
       - db
     networks:
       - back_network
+
 
   db:
     image: postgres:12.0-alpine
